--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wilbertdolce.simpleloginappb">
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +14,7 @@
         <activity
             android:name=".Login"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,14 +24,17 @@
         </activity>
         <activity
             android:name=".Usera"
-            android:label="@string/title_activity_user" >
+            android:label="@string/title_activity_user"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.example.wilbertdolce.simpleloginappb.Usera" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".pin_input" />
+        <activity android:name=".motion_option"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
